Plantas até o id10 finalizadas em pt e en

--- a/src/services/i18n/server_english.json
+++ b/src/services/i18n/server_english.json
@@ -2,37 +2,37 @@
     "plants_water_frequencies": [
         {
             "key": "day",
-            "title": "Todos os dias"
+            "title": "Everdays"
         },
         {
             "key": "week",
-            "title": "A cada semana"
+            "title": "Every weeks"
         }
     ],
     "plants_environments": [
         {
             "key": "living_room",
-            "title": "Sala"
+            "title": "living room"
         },
         {
             "key": "bedroom",
-            "title": "Quarto"
+            "title": "bedroom"
         },
         {
             "key": "kitchen",
-            "title": "Cozinha"
+            "title": "kitchen"
         },
         {
             "key": "bathroom",
-            "title": "Banheiro"
+            "title": "bathroom"
         }
     ],
     "plants": [
         {
             "id": 1,
             "name": "Aningapara",
-            "about": "É uma espécie tropical que tem crescimento rápido e fácil manuseio.",
-            "water_tips": "Mantenha a terra sempre húmida sem encharcar. Regue 2 vezes na semana.",
+            "about": "It is a tropical species that grows quickly and is easy to handle.",
+            "water_tips": "Keep the soil always moist without waterlogging. Water 2 times a week.",
             "photo": "https://storage.googleapis.com/golden-wind/nextlevelweek/05-plantmanager/1.svg",
             "environments": [
                 "living_room",
@@ -46,8 +46,8 @@
         {
             "id": 2,
             "name": "Zamioculca",
-            "about": "Apesar de florescer na primavera, fica o ano todo bonita e verdinha.",
-            "water_tips": "Utilize vasos com furos e pedras no fundo para facilitar a drenagem. Regue 1 vez no dia.",
+            "about": "Although it blooms in spring, it is beautiful and green all year round.",
+            "water_tips": "Use pots with holes and stones at the bottom to facilitate drainage. Water 1 time a day.",
             "photo": "https://storage.googleapis.com/golden-wind/nextlevelweek/05-plantmanager/2.svg",
             "environments": [
                 "living_room",
@@ -61,8 +61,8 @@
         {
             "id": 3,
             "name": "Peperomia",
-            "about": "Adapta-se tanto ao sol e sombra, mas prefere ficar num cantinho fresco, sem sol direto.",
-            "water_tips": "Nos dias mais quentes borrife água nas folhas. Regue 3 vezes na semana.",
+            "about": "It adapts to both sun and shade, but prefers to stay in a cool corner, without direct sun.",
+            "water_tips": "On warmer days spray water on the leaves. Water 3 times a week.",
             "photo": "https://storage.googleapis.com/golden-wind/nextlevelweek/05-plantmanager/3.svg",
             "environments": [
                 "bedroom"
@@ -75,8 +75,8 @@
         {
             "id": 4,
             "name": "Imbé",
-            "about": "De médio porte que se adapta a diversas regiões, além de ser bem fácil de cultivar. Conquista cada vez mais pessoas.",
-            "water_tips": "Mantenha a terra sempre húmida sem encharcar. Regue 2 vezes na semana.",
+            "about": "Medium-sized that adapts to different regions, in addition to being very easy to cultivate. It conquers more and more people.",
+            "water_tips": "Keep the soil always moist without soaking it. Water twice a week.",
             "photo": "https://storage.googleapis.com/golden-wind/nextlevelweek/05-plantmanager/4.svg",
             "environments": [
                 "living_room",
@@ -89,9 +89,9 @@
         },
         {
             "id": 5,
-            "name": "Espada São Jorge",
-            "about": "O aroma reduz os níveis de ansiedade e seu cheiro ajudar na qualidade do sono e a produtividade durante o dia.",
-            "water_tips": "Regue o solo ao redor. Regue 1 vez no dia.",
+            "name": "Sansevieria",
+            "about": "The aroma reduces anxiety levels and its scent helps with sleep quality and productivity during the day.",
+            "water_tips": "Water the surrounding soil. Water 1 time a day.",
             "photo": "https://storage.googleapis.com/golden-wind/nextlevelweek/05-plantmanager/5.svg",
             "environments": [
                 "living_room",
@@ -106,8 +106,8 @@
         {
             "id": 6,
             "name": "Yucca",
-            "about": "Yuccas são fáceis de manter e cuidar. Você pode colocá-los em pequenos potes ou até mesmo em xícaras.",
-            "water_tips": "Devido à reserva hídrica dessas verdinhas, é sempre melhor regá-las menos. Regue uma vez por semana.",
+            "about": "Yuccas are easy to maintain and take care of. You can place them in small pots or even in cups.",
+            "water_tips": "Due to the water reserve of these greens, it is always better to water them less. Water once a week.",
             "photo": "https://storage.googleapis.com/golden-wind/nextlevelweek/05-plantmanager/6.svg",
             "environments": [
                 "bedroom",
@@ -121,8 +121,8 @@
         {
             "id": 7,
             "name": "Frutíferas",
-            "about": "Essas plantas requerem algumas horas de sol por dia, portanto, mantenha-as perto das janelas.",
-            "water_tips": "Regar o solo e não as folhas. Regar 3 vezes por semana.",
+            "about": "These plants require a few hours of sun per day, so keep them close to windows.",
+            "water_tips": "Water the soil and not the leaves. Water 3 times a week.",
             "photo": "https://storage.googleapis.com/golden-wind/nextlevelweek/05-plantmanager/7.svg",
             "environments": [
                 "living_room",
@@ -135,9 +135,9 @@
         },
         {
             "id": 8,
-            "name": "Orquídea",
-            "about": "As orquídeas trazem uma sensação de tranquilidade e paz ao ambiente. Eles exigem pouca manutenção e são ótimas para quem tem pouco espaço.",
-            "water_tips": "Regar moderadamente. Regar 4 vezes por semana.",
+            "name": "Orchids ",
+            "about": "Orchids bring a sense of tranquility and peace to the environment. They require little maintenance and are great for those with limited space.",
+            "water_tips": "Water moderately. Water 4 times a week.",
             "photo": "https://storage.googleapis.com/golden-wind/nextlevelweek/05-plantmanager/8.svg",
             "environments": [
                 "bathroom"
@@ -149,9 +149,9 @@
         },
         {
             "id": 9,
-            "name": "Violeta",
-            "about": "Com flores delicadas, as violetas são ótimas para decorar o banheiro.",
-            "water_tips": "Não molhe as flores e folhas. Regue o solo duas vezes por semana.",
+            "name": "Violet",
+            "about": "With delicate flowers, violets are great for decorating the bathroom.",
+            "water_tips": "Do not wet the flowers and leaves. Water the soil twice a week.",
             "photo": "https://storage.googleapis.com/golden-wind/nextlevelweek/05-plantmanager/3.svg",
             "environments": [
                 "bathroom"
@@ -163,9 +163,9 @@
         },
         {
             "id": 10,
-            "name": "Hortênsia",
-            "about": "As hortênsias são uma planta rústica e adaptam-se a diferentes tipos de solo.",
-            "water_tips": "Mantenha o solo sempre úmido sem encharcar. Regar uma vez por dia.",
+            "name": "Hydrangea",
+            "about": "Hydrangeas are a rustic plant and adapt to different types of soil.",
+            "water_tips": "Keep the soil always moist without soaking. Water once a day.",
             "photo": "https://storage.googleapis.com/golden-wind/nextlevelweek/05-plantmanager/2.svg",
             "environments": [
                 "bathroom"
