tradução concluida na view android

--- a/.md
+++ b/.md
@@ -1,11 +1,25 @@
-corrigi o scroll 
-alterei o css 
-corrigi as rotas do androis
+Bugs do android:
+    corrigi o scroll "src\android\pages\plants_select.tsx"
+    alterei o css all pages
+    corrigi as rotas do androis route "src\routes\stack.routes.tsx"
 
 pendentes:
+    -Criar a tela "Começar"
 
--Criar a tela "Começar"
+Adicionais:
+    -api react-native-localize
+        obtem informações de localização do dispositivo, incluindo a linguagem atual do sistema operacional
 
+    -api intl-pluralrules
+        corrigindo problemas de plural e formatação de numeros para outras linguagens
+    
+    -api react-i18next 
+        api de tradução
+    
+    -api i18next
+        dependencia de produção
+    
+Concluidas:
 -Refatorar telas android view
-
--Começando agr a tradução do app
+-tradução do app
+-criei o json das plantas português e inglês
