--- a/.md
+++ b/.md
@@ -20,6 +20,7 @@ Adicionais:
         dependencia de produção
     
 Concluidas:
--Refatorar telas android view
--tradução do app
--criei o json das plantas português e inglês
+    -Refatorar telas android view
+    -tradução do app
+    -criei o json das plantas português e inglês
+    -mudar a tradução de acordo com a liguagem do app caso não esteja em uma liguagem conhecida ingles é o padrão
