--- a/src/services/i18n/locales/en_US.json
+++ b/src/services/i18n/locales/en_US.json
@@ -1,5 +1,13 @@
 {
     "translation": {
+        "exemplo@.com":"examplo@.com",
+        "Senha":"Passeword",
+        "Conectar-se":"Login",
+        "Cadastre-se":"Sign",
+        "EMAIL VALIDO":"VALID EMAIL",
+        "SENHA VALIDA":"VALID SENHA",
+        "EMAIL INVALIDO":"INVALID EMAIL",
+        "SENHA INVALIDA":"INVALID SENHA",
         "Gerencie suas plantas de forma fácil": "Manage your plants easily",
         "Não esqueça mais de regar suas plantas. Nós cuidamos de lemrar você sempre que precisar.": "Never forget to water your plants again. We take care of reminding you whenever you need it.",
         "Como podemos chamar você?": "What can we call you?",
