--- a/src/services/i18n/locales/pt_BR.json
+++ b/src/services/i18n/locales/pt_BR.json
@@ -1,5 +1,14 @@
 {
     "translation": {
+        "exemplo@.com":"exemplo@.com",
+        "Senha":"Senha",
+        "Conectar-se":"Conectar-se",
+        "Cadastre-se":"Cadastre-se",
+        "EMAIL VALIDO":"EMAIL VALIDO",
+        "SENHA VALIDA":"SENHA VALIDA",
+        "EMAIL INVALIDO":"EMAIL INVALIDO",
+        "SENHA INVALIDA":"SENHA INVALIDA",
+
         "Gerencie suas plantas de forma fácil": "Gerencie \nsuas plantas de\n forma fácil",
         "Não esqueça mais de regar suas plantas. Nós cuidamos de lemrar você sempre que precisar.": "Não esqueça mais de regar suas plantas. Nós cuidamos de lemrar você sempre que precisar.",
         "Como podemos chamar você?": "Como podemos\n chamar você?",
