--- a/.md
+++ b/.md
@@ -4,7 +4,6 @@ Bugs do android:
     corrigi as rotas do androis route "src\routes\stack.routes.tsx"
 
 pendentes:
-    -Criar a tela "Começar"
 
 Adicionais:
     -api react-native-localize
@@ -20,6 +19,8 @@ Adicionais:
         dependencia de produção
     
 Concluidas:
+    -Criar a tela "Começar"
+    -Criar a tela "sign"
     -Refatorar telas android view
     -tradução do app
     -criei o json das plantas português e inglês
